[package]
name = "dorisctl"
version = "0.1.0"
edition = "2021"
description = "Developer-first CLI for Apache Doris"

[[bin]]
name = "dorisctl"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive", "env"] }
tokio = { version = "=1.36.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "=0.8.8"
ureq = { version = "=2.9.7", features = ["json", "tls"] }
mysql = { version = "=25.0.1" }
comfy-table = "=7.1.1"
indicatif = "=0.17.8"
anyhow = "1"
dirs = "=5.0.1"
colored = "=2.1.0"
csv = "=1.3.0"
dialoguer = "=0.11.0"
similar = "=2.5.0"
rustyline = "=14.0.0"
tracing = "0.1.44"
